--- a/assets/loc/cardinal/es_ES-pocket.lang
+++ b/assets/loc/cardinal/es_ES-pocket.lang
@@ -6,4 +6,4 @@
 
 ## ITEMS
 
-item.cardinalFragment.crystallite.name=[Needs Translating] Crystallite Fragment
+item.cardinalFragment.crystallite.name=[Valuable] Fragmento de Cristallita
